--- a/include/views/default/cockpit/drivers/shift/status/index.phtml
+++ b/include/views/default/cockpit/drivers/shift/status/index.phtml
@@ -63,6 +63,7 @@
 							<td>Send sms about schedule?</td>
 							<td>Type</td>
 							<td>Pex card</td>
+							<td>Orders deliver/hour</td>
 							<td>Notes</td>
 							<td></td>
 						</tr>
@@ -135,6 +136,15 @@
 											echo 'No';
 										}
 									?>
+								</td>
+								<td>
+									<?php $ordersPerHour = $driver->ordersPerHour(); ?>
+									<input step="any" type="number" class="orders-per-hour" value="<?php if( $ordersPerHour ){ echo $ordersPerHour; } ?>" style="width:50px;" id_admin="<?php echo $driver->id_admin; ?>" />
+									<div style="height:30px;">
+										<div style="display:none;" id="admin-orders-updating-<?php echo $driver->id_admin; ?>">
+										<i class="icon-spinner icon-spin"></i>
+									</div>
+									</div>
 								</td>
 								<td>
 									<?php
