--- a/include/views/default/cockpit2/layout/html.top.phtml
+++ b/include/views/default/cockpit2/layout/html.top.phtml
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NGApp">
 <? if (!c::config()->bundle) : ?>
 	<base href="/">
 <? endif; ?>
