--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -109,7 +109,7 @@
 		</td></tr>
 		<tr><td class="support-side-chat-row">
 			<div class="support-chat-box-wrap">
-				<textarea id="support-chat-box" class="support-chat-box" placeholder="Type someting and press enter..." chat-send></textarea>
+				<textarea id="support-chat-box" class="support-chat-box" placeholder="Type something and press enter..." chat-send></textarea>
 			</div>
 		</td></tr>
 	</table>
