--- a/include/views/default/seven/layout/html.body.phtml
+++ b/include/views/default/seven/layout/html.body.phtml
@@ -16,7 +16,7 @@
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-cutlery"></i></td>
-						<td class="side-menu-label">Food</a></td>
+						<td class="side-menu-label">Choose Food</a></td>
 					</tr>
 				</table>
 			</li>
@@ -86,9 +86,9 @@
 				</table>
 			</li>
 		</ul>
-		
-		
-			
+
+
+
 
 		<a href="{{(isPhoneGap && 'fb://profile/372531956099058' || !isPhoneGap && 'http://facebook.com/crunchbutton')}}" target="_blank" class="facebook-like-link">
 			<button class="facebook-like">
@@ -101,7 +101,7 @@
 </div>
 
 <div class="wrapper static-nav-viewport loggedout-hideable">
-	
+
 	<div id="snap-content" class="snap-content">
 		<div class="navs fixed" data-position="fixed" ng-controller="MainHeaderCtrl">
 			<div class="nav nav-top">
@@ -128,7 +128,7 @@
 							<li><a ng-click="App.test.card()" ng-show="debug()"><i class="fa fa-circle-o"></i>TEST: card</a></li>
 					    </ul>
 					</div>
-				
+
 					<div title="Menu" class="menu side" ng-click="navigation.menu()" ng-show="navigation.buttons.menu"></div>
 					<div title="Menu" class="menu drop" ng-show="navigation.buttons.menu" ng-toggle="menudropdown"></div>
 					<div title="Back" ng-show="navigation.buttons.back" class="nav-back hide-before-init" ng-click="back()"></div>
@@ -162,7 +162,7 @@
 					<? if (!$this->export) : ?>
 						<div class="fb-like-box" data-width="200" data-href="https://www.facebook.com/crunchbutton" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-show-faces="false" data-header="false" data-stream="false" data-show-border="false"></div>
 					<? endif ; ?>
-	
+
 					<div class="social">
 						<a href="http://facebook.com/crunchbutton" target="_blank" class="fa fa-facebook"></a>
 						<a href="http://twitter.com/crunchbutton" target="_blank" class="fa fa-twitter"></a>
