--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1809,9 +1809,9 @@ h4.title{
 }
 
 .column-date .orderid {
-	text-decoration: underline;
+	border-bottom: 2px solid #FFF;
 	font-weight: bold;
-	font-size: 1.2em;
+	font-size: 1.4em;
 	cursor: pointer;
 	margin-bottom: 1em;
 	font-family: Ruda;
