--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -174,6 +174,26 @@
 					<div class="admin-item">
 						<div class="admin-item-left">
 							<div class="admin-item-name">
+								Force close tagline
+							</div>
+
+							<div class="admin-item-desc">
+								Tagline will be shown when you force close a restaurant.
+							</div>
+
+							<div class="admin-item-desc">
+								text size limit 40 chars
+							</div>
+						</div>
+
+						<div class="admin-item-right">
+							<input id="restaurant-force-close-tagline" type="input">
+						</div>
+					</div>
+
+					<div class="admin-item">
+						<div class="admin-item-left">
+							<div class="admin-item-name">
 								Text under Restaurant Name on Restaurant Checkout Page
 							</div>
 
