--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -150,7 +150,8 @@
 						<div class="field-row">
 							<div class="field-key">Shift ends in</div>
 							<div class="field-value">
-								<span ng-if="ticket.order.driver.working">{{ticket.order.driver.shift_ends/60/60 | formatPrice}} hours</span>
+							{{ticket.order.driver.shift_ends/60/60 | formatPrice}}
+								<span ng-if="ticket.order.driver.working">{{ticket.order.driver.shift_ends }}</span>
 								<span ng-if="!ticket.order.driver.working">Shift ended</span>
 							</div>
 						</div>
