--- a/include/views/default/cockpit2/frontend/support/support.phtml
+++ b/include/views/default/cockpit2/frontend/support/support.phtml
@@ -4,11 +4,18 @@
 
 <div class="content-padding">
 
+	<div class="box-content2 box-content-table">
+		<table>
+			<tr><td><a class="no-underline" href="/support/phone">Make a call / Send SMS</a></td></tr>
+		</table>
+	</div>
+
+
 	<h1 class="title"><i class="fa fa-bookmark"></i>Tickets<div class="title-loader" ng-if="loadingtickets"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<ng-include src="'assets/view/listview-tickets.html'"></ng-include>
 	<div class="tb-extras right"><a href="/tickets">View all Tickets</a></div>
 	<div class="divider"></div>
-	
+
 	<h1 class="title"><i class="fa fa-phone"></i>Calls<div class="title-loader" ng-if="loadingcalls"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<ng-include src="'assets/view/listview-calls.html'"></ng-include>
 	<div class="tb-extras right"><a href="/calls">View all Calls</a></div>
