--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -82,7 +82,13 @@
 		</td></tr>
 		<tr><td class="support-chat-contents">
 			<div class="support-chat-contents-scroll">
-				<div ng-repeat="message in ticket.messages" class="support-chat-contents-message" id="suppport-chat-message-{{message.id_support}}" ng-class="{'support-chat-contents-message-support': message.is_support, 'support-chat-contents-message-driver': message.is_driver, 'support-chat-contents-message-customer': (!message.is_support && !message.is_driver), 'support-chat-contents-message-unset': message.sending, 'support-chat-contents-message-system': message.from == 'system'}">
+				<div ng-repeat="message in ticket.messages" class="support-chat-contents-message" id="suppport-chat-message-{{message.id_support}}" ng-class="{
+				'support-chat-contents-message-support': message.is_support,
+				'support-chat-contents-message-driver': message.is_driver,
+				'support-chat-contents-message-customer': (!message.is_support && !message.is_driver),
+				'support-chat-contents-message-unset': message.sending,
+				'support-chat-contents-message-note': message.is_note,
+				'support-chat-contents-message-system': message.from == 'system' }">
 
 					<a href="/{{message.is_support || message.is_driver ? 'staff' : 'customer'}}/{{message.id_admin}}">
 					<div class="support-chat-contents-message-name">
@@ -92,10 +98,12 @@
 							</span>
 							<span ng-if="message.from != 'system'">
 								<i class="fa fa-comment" ng-if="message.is_support"></i>
-								<i class="fa fa-car" ng-if="!message.is_support && message.is_driver"></i>
-								<i class="fa fa-user" ng-if="!message.is_support && !message.is_driver"></i>
+								<i class="fa fa-file-text-o" ng-if="message.is_note"></i>
+								<i class="fa fa-car" ng-if="!message.is_note && !message.is_support && message.is_driver"></i>
+								<i class="fa fa-user" ng-if="!message.is_note && !message.is_support && !message.is_driver"></i>
 							</span>
 						</span>
+						<span ng-if="message.is_note">Note by </span>
 						{{(message.first_name && message.first_name != 'false') ? message.first_name : message.name}}
 					</div>
 					</a>
@@ -109,8 +117,9 @@
 		</td></tr>
 		<tr><td class="support-side-chat-row">
 			<div class="support-chat-box-wrap">
-				<textarea id="support-chat-box" class="support-chat-box" placeholder="Type something and press enter..." chat-send></textarea>
+				<textarea id="support-chat-box" ng-model="message_text" class="support-chat-box" placeholder="Type something and press enter..." chat-send></textarea>
 			</div>
+			<button class="button" ng-class="{'save' : message_text}" ng-click="add_note();"><i class="fa fa-file-text-o"></i> Add note</button>
 		</td></tr>
 	</table>
 </div>
