--- a/include/views/default/seven/frontend/help.phtml
+++ b/include/views/default/seven/frontend/help.phtml
@@ -40,16 +40,13 @@
 	<br><br><br>
 	
 	<h4>How do I order food?</h4>
-	<p>Easy! Just go to <a href="http://crunchbutton.com" target="_blank">crunchbutton.com</a> and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The restaurant will call you when they're outside.</p>
+	<p>Easy! Just go to <a href="http://crunchbutton.com" target="_blank">crunchbutton.com</a> and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.</p>
 	<br /><br />
 	<h4>How do you save my info?</h4>
-	<p>We use a super secure system away from our web server to store and encrypt all your financial information.</p>
+	<p>We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you first place an order. We never store any of your financial information on our web servers.</p>
 	<br /><br />
 	<h4>How do I change my stored info?</h4>
 	<p>Just click on the info you want to change, enter the changes, and, after you place your order, it’ll be saved for next time.</p>
-	<br /><br />
-	<h4>Is it cheaper for me to just call the restaurant?</h4>
-	<p>No!! Crunchbutton is totally free to you. Prices are the same as calling the restaurant when the restaurant delivers, and when it doesn’t we either sign up the restaurant or mark up prices—so you’re paying for the delivery. Sorry! We gotta make a living too, ya know ;)</p>
 	<br /><br />
 	<h4>But I've never used Crunchbutton before...</h4>
 	<p>Oh man, it's okay. I remember my first time, it didn't last more than 30 seconds. I went to Crunchbutton.com, found my favorite restaurant, hit "Get Food." Minutes later, my sandwich arrived. Post-coital bliss ensued, that sandwich sure knew how to crunch my buttons.</p>
