--- a/include/views/default/crunchbutton/frontend/help.phtml
+++ b/include/views/default/crunchbutton/frontend/help.phtml
@@ -20,13 +20,10 @@
 	<h1 class="about-header">FAQ</h1>
 	<p>
 		<b>How do I order food?</b><br />
-		Easy! Just go to crunchbutton.com and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The restaurant will call you when they're outside.
+		Easy! Just go to crunchbutton.com and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.
 		<br /><br />
 		<b>How do you save my info?</b><br />
-		We use a super secure system away from our web server to store and encrypt all your financial information.
-		<br /><br />
-		<b>Is it cheaper for me to just call the restaurant?</b><br />
-		No!! Crunchbutton is totally free to you. Prices are the same as calling the restaurant when the restaurant delivers, and when it doesn’t we either sign up the restaurant or mark up prices—so you’re paying for the delivery. Sorry! We gotta make a living too, ya know ;)
+		We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you first place an order. We never store any of your financial information on our web servers.
 		<br /><br />
 		<b>How do I change my stored info?</b><br />
 		Just click on the info you want to change, enter the changes, and, after you place your order, it’ll be saved for next time.
