--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -1179,7 +1179,7 @@
 
 			<div class="admin-modal-item">
 				<div class="admin-modal-explanation">
-					Create a new copy of this dish in the same or another
+					Create a new <b>linked</b> copy of this dish in the same or another
 					category.
 				</div>&nbsp;&nbsp;
 
@@ -1187,7 +1187,7 @@
 					<select class="copy-dish-to-category-select"></select> &nbsp;&nbsp;
 
 					<div class="copy-dish-to-category-button admin-button-workflow">
-						copy
+						copy &amp; link
 					</div>
 				</div>
 			</div><!--
@@ -1206,7 +1206,7 @@
 
 			<div class="admin-modal-item">
 				<div class="admin-modal-explanation">
-					Copy the options for this dish to another dish, and unlink them (option names and prices can be changed independently).
+					Copy the options for this dish to another dish, and <b>unlink</b> them (option names and prices can be changed independently).
 				</div>&nbsp;&nbsp;
 
 				<div class="admin-modal-right">
