--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -22,7 +22,11 @@
 			<div ng-if="ticket.type == 'WARNING' && !ticket.order.id_order" class="support-box-wrap">
 				<h1>Internal Warning</h1>
 				<div class="box-content-color">
-					No action is required.
+					<table class="field-container">
+						<tr class="field-row">
+							<td class="field-key">No action is required.</td>
+						</tr>
+					</table>
 				</div>
 			</div>
 
@@ -165,7 +169,7 @@
 				</div>
 			</div>
 
-			<div ng-if="ticket.id_support">
+			<div ng-show="ticket.id_support">
 				<div class="support-box-wrap">
 					<h1>Comments</h1>
 					<div ng-if="ticket.comments">
