--- a/include/views/default/crunchbutton/frontend/help.phtml
+++ b/include/views/default/crunchbutton/frontend/help.phtml
@@ -23,7 +23,7 @@
 		Easy! Just go to crunchbutton.com and click the restaurant you want to order from. Add whatever food you want, and enter your address, phone, and payment info. Click "Get Food" and try to stay hungry! The driver will call you when they're outside.
 		<br /><br />
 		<b>How do you save my info?</b><br />
-		We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you first place an order. We never store any of your financial information on our web servers.
+		We use SSL and a PCI-DSS Level 1 Compliant provider to encrypt your information when you place an order. We never store any of your financial information on our web servers.
 		<br /><br />
 		<b>How do I change my stored info?</b><br />
 		Just click on the info you want to change, enter the changes, and, after you place your order, it’ll be saved for next time.
